# iwfm-io

./: .gitignore  LICENSE  LICENSE-DLLS.md  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dlls/: .gitignore  default_version.txt
docs/: COMPARISON.md  DLL_INQUIRY_MODE_LIMITS.md  DLL_RETURN_FLOW_SKIP_BUG.md  GALLERY.md  TEST_PLOTS_RESULTS.md  agents.md  api-reference.md  index.md  plotting.md  quickstart.md
examples/: 01_read_inputs.py  02_read_outputs.py  03_roundtrip.py  04_dll_wrapper.py  05_plotting.py  06_multi_run_budgets.py  07_compare_models.py  08_run_scenario.py  09_full_input_datasets.py  test_plots.py  test_plots_dllfree.py
iwfm/: __init__.py  _dll.py  _errors.py  budget.py  download.py  misc.py  model.py  run.py  zbudget.py
iwfm/io/: __init__.py  _parser.py  _writer.py  collect.py  compare.py  model_adapter.py  scenario.py  test_plots.py
iwfm/plots/: __init__.py  animations.py  connectivity.py  cross_sections.py  maps.py  profiles.py  seasonal.py  spatial_patterns.py  stream_analysis.py  subsidence.py  summary.py  supply_demand.py  timeseries.py  trends.py  water_balance.py
iwfm_io/: __init__.py  _parser.py  _tokens.py  _validation.py  _writer.py  collect.py  compare.py  model_adapter.py  run.py  scenario.py
iwfm_io/dll/: __init__.py  _dll.py  _marshal.py  budget.py  download.py  model.py  zbudget.py
iwfm_io/models/: __init__.py  base.py  groundwater.py  lake.py  misc.py  preprocessor.py  rootzone.py  simulation.py  stream.py  timeseries.py
iwfm_io/plots/: __init__.py  _plotly.py  animations.py  connectivity.py  cross_sections.py  maps.py  profiles.py  seasonal.py  spatial_patterns.py  stream_analysis.py  subsidence.py  summary.py  timeseries.py  trends.py  water_balance.py
iwfm_io/readers/: __init__.py  _element_groups.py  _param_blocks.py  groundwater.py  hdf5.py  lake.py  misc.py  (+6 more)
tests/: test_dll_generations.py  test_download.py  test_run.py
(+61 files in other folders)
