[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "iwfm-io"
version = "2.1.0"
description = "Read, write, analyze and visualize IWFM (Integrated Water Flow Model) models: pure-Python file I/O, DLL wrapper, and 58 plot functions"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "Sercan Ceyhan", email = "sercan.ceyhan@gmail.com" },
]
keywords = [
    "IWFM",
    "groundwater",
    "hydrology",
    "hydrogeology",
    "water-resources",
    "surface-water",
    "simulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.2",
    "h5py>=3.0",
    "matplotlib>=3.3",
]

[project.urls]
Homepage = "https://github.com/SercanC/iwfm-io"
Repository = "https://github.com/SercanC/iwfm-io"
Issues = "https://github.com/SercanC/iwfm-io/issues"

[project.optional-dependencies]
# GeoDataFrames with point/polygon geometry from the readers; everything
# works without this — spatial tables degrade to plain DataFrames.
geo = [
    "geopandas>=0.10",
    "shapely>=1.8",
]
# Interactive/high-quality Sankey diagrams (plot_budget_sankey engine="plotly";
# kaleido enables static PNG export)
viz = [
    "plotly>=5.0",
    "kaleido",
]

[tool.setuptools.packages.find]
include = ["iwfm_io*"]
